# ozz-8bit

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORK_DIFFERENCES.md  IMPROVEMENT_ROADMAP.md  MICROCODE.md  OZZASM.md  OZZEMU.md  README.md  ROADMAP.md  SECURITY.md  howtotest.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Architecture-Guide.md  Assembler-Guide.md  Developer-Guide.md  Emulator-Guide.md  Hardware-Guide.md  Instruction-Set-Reference.md
hardware/: README.md
hardware/alu/: README.md
hardware/clock/: README.md
hardware/cpu/: README.md
hardware/io/: README.md
hardware/memory/: README.md
hardware/pcb/: README.md
microcode/: __init__.py  microcode_export.py  microcode_generator.py  microcode_tables.py
ozz8bit/: __init__.py  isa.py
ozzasm/: __init__.py  assembler.py  lexer.py  linker.py  parser.py  preprocessor.py
ozzemu/: __init__.py  cpu.py  debugger.py  emulator.py  memory.py  server.py
programs/: calculator.ozz  counter.ozz  hello_world.ozz  interrupt_demo.oz  memory_viewer.ozz  pong.ozz  prime_generator.ozz  snake.ozz
scripts/: run-live-demo.sh
tests/: test_assembler.py  test_cpu.py  test_emulator.py  test_integration.py  test_microcode.py
web-visualizer/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web-visualizer/src/: App.tsx  mockMachine.ts  styles.css  types.ts  wsClient.ts
